# radar_data

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cell.json  clean_data.csv  color_speed.ipynb  data.dvc  data_parser.ipynb  data_processing.ipynb  delta_t.ipynb  features_gist.ipynb  frame_lidar.ipynb  frame_radar.ipynb  frame_radar_lidar.ipynb  frame_speedy_points.ipynb  gif_delta_t.ipynb  gif_generate_lidar.ipynb  globals.py  images_with_different_dt.ipynb  parser.py  pyproject.toml  radar_features_hist_generator(view).ipynb  requirements.txt  speeeeeeed_analiser.ipynb  ulimate_class.py  video.ipynb  visualisation.ipynb
.dvc/: config
frame_generator/: frame_lidar.ipynb  frame_radar.ipynb  frame_radar_lidar.ipynb  gif_delta_t.ipynb  gif_generate_lidar.ipynb
notebooks/: DELETEME.md  color_speed.ipynb  data_parser.ipynb  frame_speedy_points.ipynb  images_with_different_dt.ipynb  radar_features_hist_generator(view).ipynb  speed_analiser.ipynb  speeeeeeed_analiser.ipynb  visualisation.ipynb
radar_data/: dummy.py  filters.py  parser.py  types.py
radar_data_tool/: pyproject.toml
radar_data_tool/radar_data_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: DELETEME.md  coloring_classes.py  dummy.py  filters.py  parser.py
tests/: test_package.py
