[tool.black]
line-length = 90
target-version = ['py310']
extend-exclude = '''
migrations # Django DB migrations
'''

[project]
name = "my_package"
version = "0.1.0"
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "GNU GENERAL PUBLIC LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "plotly==6.0.0",
    "imageio==2.37.0",
    "seaborn==0.13.2",
    "black==25.1.0"
]
dynamic = ["version"]

[tool.black]
line-length = 90
target-version = ['py310']