[project]
name = "radar-data"
version = "0.1.0"
description = "package for parsing raw radar/lidar data, coloring dots using different features, and plotting"
authors = [
    {name = "ArtemK",email = "ubileyka19@gmail.com"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
